Bug 169813 - Imported SVG changes appearance after breaking
Summary: Imported SVG changes appearance after breaking
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected
Depends on: Draw-Images
Blocks:
  Show dependency treegraph
 
Reported: 2025-12-03 16:44 UTC by jaacks.news
Modified: 2026-01-09 07:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document (22.55 KB, application/vnd.oasis.opendocument.graphics)
2025-12-03 16:45 UTC, jaacks.news
Details
Imported SVG (12.55 KB, image/svg+xml)
2025-12-03 19:34 UTC, jaacks.news
Details
Screenshot opening with Gimp (17.23 KB, image/png)
2025-12-04 00:44 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jaacks.news 2025-12-03 16:44:48 UTC
Description:
An imported SVG from the notation program MuseScore Studio 4.6 changes after breaking it. Elements appear to be bolder and look rasterized.

Steps to Reproduce:
1. Import an exported SVG from MuseScore Studio into LibreOffice Draw oder Impress.
2. Click right and choose "break".

Actual Results:
Elements appear to be bolder and look rasterized

Expected Results:
Elements shouldn't change.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 4; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 1 jaacks.news 2025-12-03 16:45:53 UTC
Created attachment 204412 [details]
Test document
Comment 2 jaacks.news 2025-12-03 19:33:05 UTC
The rasterized looks come from lines applied to curves. They are not in the original SVG.
Workaround: Select all elements except staff and bar lines and change lines to none.
Comment 3 jaacks.news 2025-12-03 19:34:15 UTC
Created attachment 204415 [details]
Imported SVG
Comment 4 m_a_riosv 2025-12-04 00:44:46 UTC
Created attachment 204418 [details]
Screenshot opening with Gimp

Don't looks better opening with Gimp.
Comment 5 Saburo 2025-12-28 08:51:16 UTC
reproduce with
Version: 26.2.0.0.beta1 (X86_64)
Build ID: 1ff380402efe713308d6f0e5c815a6e3a1b3b67c
CPU threads: 4; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

not reproduce
Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 4; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

bibisected with linux-64-25.8
commit 8546b081d668a90799a4c7357e7534adaa7730ce
author	Andreas Heinisch
tdf#155211 - Change line style from solid to dashed

***
adding CC: Andreas Heinisch
please, take a look?
It seems that the stroke of the unset becomes a dash
Comment 6 Andreas Heinisch 2025-12-28 10:37:06 UTC
I tested different files for this issue. The SVG is imported with a zero line width and dash lengths smaller than LibreOffice’s SMALLEST_DASH_WIDTH. As a result, the dash length is clamped to SMALLEST_DASH_WIDTH. 

The patch that solves the issue where no dash line is set at all appears to be correct.

However, this patch makes the underlying problem more apparent: why is this SVG imported with any dash pattern at all?
Comment 7 Commit Notification 2026-01-04 10:53:22 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d7e4c02cfb7b133fff06251e844d0694f4e3c457

tdf#169813 - Reset default dash option during GDIMetaFileImport

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2026-01-04 19:07:25 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8a76ef1a3ab3ac2cf892936b6ae8098a9c384e18

tdf#169813 - Reset default dash option during GDIMetaFileImport

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 jaacks.news 2026-01-06 13:03:43 UTC
I tested the fix and can confirm that it works with the daily build from 2026-01-06 03:36:34 	
Thank you for fixing, Andreas.
Comment 10 Commit Notification 2026-01-08 16:07:21 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/447e12adb7d6fc6a1f480d7c8d01d62411349cfe

tdf#169813 - Reset default dash option during GDIMetaFileImport

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2026-01-09 07:56:08 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/c115cd238ce2a31ae57184c375f4606f831f5b89

tdf#169813 - Reset default dash option during GDIMetaFileImport

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.