tdf#169813 - Reset default dash option during GDIMetaFileImport

Prevent default constructor dash settings from affecting non-dashed
line segements.

Change-Id: I082f03a2a0fc92f8f319e6e82e496c6ee72386b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196264
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>