svx/source/svdraw/svdfmtf.cxx
@@ -88,7 +88,6 @@ ImpSdrGDIMetaFileImport::ImpSdrGDIMetaFileImport(
     mnLineWidth(0),
     maLineJoin(basegfx::B2DLineJoin::NONE),
     maLineCap(css::drawing::LineCap_BUTT),
-    maDash(css::drawing::DashStyle_RECT, 0, 0, 0, 0, 0),
     mbMov(false),
     mbSize(false),
     maOfs(0, 0),
@@ -367,7 +366,7 @@ void ImpSdrGDIMetaFileImport::SetAttributes(SdrObject* pObj, bool bForceTextAttr
         }
         else
         {
-            mpLineAttr->Put(XLineDashItem(OUString(), XDash(css::drawing::DashStyle_RECT)));
+            mpLineAttr->Put(XLineDashItem(OUString(), XDash()));
         }
     }
     else
@@ -695,7 +694,8 @@ void ImpSdrGDIMetaFileImport::DoAction(MetaLineAction const & rAct)
     SetAttributes(pPath.get());
     mnLineWidth = 0;
     maLineJoin = basegfx::B2DLineJoin::NONE;
-    maDash = XDash();
+    // tdf#169813 - reset default dash options
+    maDash = XDash(css::drawing::DashStyle_RECT, 0, 0, 0, 0, 0);
     InsertObj(pPath.get(), false);
 }
 
@@ -943,7 +943,8 @@ void ImpSdrGDIMetaFileImport::DoAction( MetaPolyLineAction const & rAct )
     SetAttributes(pPath.get());
     mnLineWidth = 0;
     maLineJoin = basegfx::B2DLineJoin::NONE;
-    maDash = XDash();
+    // tdf#169813 - reset default dash options
+    maDash = XDash(css::drawing::DashStyle_RECT, 0, 0, 0, 0, 0);
     InsertObj(pPath.get(), false);
 }
 
